fix: nz-spin alignments

--- a/src/components/style/patch.less
+++ b/src/components/style/patch.less
@@ -1,6 +1,9 @@
 nz-list,
 nz-list-item,
-nz-list-item-meta
- {
+nz-list-item-meta {
+    display: block;
+}
+
+nz-list nz-spin {
     display: block;
 }
